sqf fix, restyling

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ body {
     background-image: url(/static/media/arma3.654bea2e.png);
     background-size: auto;
     background-position: center;
-    background-repeat: no-repeat; */
+	background-repeat: no-repeat; */
+	background: #0b1022;
 }
 
 code {
