connected to DB, save/load presets, fixes, styles, etc

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@ body {
 	display: flex;
 	justify-content: center;
 }
+#root {
+	width: 100%;
+}
 
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
